SAK-15716
git-svn-id: https://source.sakaiproject.org/svn/emailtemplateservice/trunk@57667 66ffb92e-73f9-0310-93c1-f5514f145a0a